[ci] Use get declared constructor before calling new instance